compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/pack/missingCapabilityRole.qn
pub missingCapabilityRole(
  ctx: HttpCtx<AuthUser, i64, JsonBody<CreateUserBody>>
) -> bool {
  return ctx.extend.allHttpCapabilities()
}
